--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="header">Header</header>
   <main class="main-content">
-    <button class="glow-on-hover" type="button">Main Content</button>
+    <button class="glow-on-hover" type="button">hold or hover </button>
   </main>
   <footer class="footer">Footer</footer>
 </body>
